@@ -1,5 +1,12 @@
 2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/time/TimePeriodValue.java
+    (toString): New method override,
+    * source/org/jfree/data/time/TimePeriodValues.java
+    (updateBounds): Update maxMiddleIndex correctly.
+    
+2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/time/Week.java
     (Week(Date, TimeZone)): Hand on the zone.
     
